--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
-group = 'com.study'
+group = 'com.yp'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -56,6 +56,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
 
 
 
